examples/test/testpolicy4511.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4511
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key27: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value0
          key41: value49
          key14: value38
      podSelector:
        matchLabels:
          key32: value44
          key29: value37
